--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*Estilização da Página*/
+html{
+    background-color: rgb(228, 252, 244);
+}
+
 /*Estilização dos Links*/
 a{
     color: black;
@@ -13,4 +18,31 @@ a:hover{
     height: 30px;
     display: inline-block;
     padding-left: 10px;
+    
+}
+
+.contats{
+    padding-left: 10px;
+    font-size: x-large;
+    margin-bottom: -10px;
+}
+
+/*Título*/
+h1{
+    font-size: 50px;
+    margin-top: -5px;
+}
+
+.subtitle{
+    font-size: 17px;
+    margin-top: -21px;
+}
+
+header{
+    border-bottom:1px solid black;
+}
+
+/*Artigos*/
+h3{
+    font-size: 30px;
 }
